LIFE PORTAL WEBSITE.
1.My training(tab) container completed.

2.created new files viewmore-html/css which is the layout for view more
button in the My training(tab) container.

3.when clicked on view more button it opens new HTML(viewmoreHTML).

4.In view more HTML layout few work pending.

files modified:
	mainPage.html
	mainPage.js

Added new files:
	viewmoreHTML.html
	viewmore.css

--- a/mainPage.html
+++ b/mainPage.html
@@ -121,7 +121,7 @@
         <div id="tabs">
           <ul>
             <li>
-              <a onclick="toggleVisibility('myTrainingDivision');" href="#myTraining">
+              <a onclick="toggleVisibility('myTrainingDivision');" href="#myTraining" class="active">
                 <span>
                   <img class="dashboard-icon" src="Images/my-training.png"></img>
                   <img class="dashboard-icon1" src="Images/my-training1.png"></img>
@@ -189,7 +189,59 @@
         <!-- divisions for TABS starts here -->
         <div class="tabsContainerDivision">
           <div id="myTrainingDivision" style="display: block;">
-            <p>I am My Training</p>
+            <table id="myTrainingDivisionTable" cellspacing="0" cellpadding="0">
+              <th>Training</th>
+              <th>Proficiency Level</th>
+              <th>Skill</th>
+              <th>Start Date</th>
+              <th>End Date</th>
+              <th>Catagory</th>
+              <th>Type</th>
+              <th>Status</th>
+              <th>View</th>
+              <tr>
+                <td>QMS Induction (Mechanical) – Practitioner</td>
+                <td>Practitioner</td>
+                <td>Project Management Processes</td>
+                <td>-</td>
+                <td>-</td>
+                <td>Process/Methodology</td>
+                <td>Certification Course</td>
+                <td>-</td>
+                <td>
+                  <a href="#">Launch</a>
+                </td>
+              </tr>
+              <tr>
+                <td>QMS Induction (Embedded) – Practitioner</td>
+                <td>Practitioner</td>
+                <td>Project Management Processes</td>
+                <td>-</td>
+                <td>-</td>
+                <td>Process/Methodology</td>
+                <td>Certification Course</td>
+                <td>-</td>
+                <td>
+                  <a href="#">Launch</a>
+                </td>
+              </tr>
+              <tr>
+                <td>Information Security Management System</td>
+                <td>Awareness</td>
+                <td>Information Security Management</td>
+                <td>-</td>
+                <td>-</td>
+                <td>Process/Methodology</td>
+                <td>Certification Course</td>
+                <td>-</td>
+                <td>
+                  <a href="#">Launch</a>
+                </td>
+              </tr>
+            </table>
+            <a id="viewmore" href="D:\LIFEPORTAL\viewmoreHTML.html" target="_blank">View more
+              <img src="Images/viewmoreicon.png" alt="view more">
+            </a>
           </div>
 
           <div id="requestedTrainingDivision">
