LIFE PORTAL WEBSITE.
1.side bar opens and close with same button click.

2.drop down opens and close with same buttion click.

3.changes made on tabs containers.
	tasks completed on tabs:
		1.My Training.
		2.Requested Training.
		3.My Learning Plans.
		4.My completions.
		5.My online tests.

files modified:
	mainPage.html
	mainPage.js
	mainPage.css
	viewmoreHTML.html

--- a/mainPage.html
+++ b/mainPage.html
@@ -245,26 +245,102 @@
           </div>
 
           <div id="requestedTrainingDivision">
-            <p>I am Requested Training</p>
+            <p>No Nominated Courses</p>
           </div>
-
           <div id="trainingCatalogDivision">
-            <p>I am Training Catalogue</p>
+            <select>
+              <option value="">Mode of Learning</option>
+              <option value="">Trainings</option>
+              <option value="">Class Room</option>
+              <option value="">eLearning</option>
+              <option value="">Social Learning</option>
+            </select>
           </div>
           <div id="myLearningPlansDivision">
-            <p>I am My Learning</p>
+            <h5>JANUARY - MARCH</h5>
+            <br>
+            <p>Present Quarter Plans Not Available</p>
+            <br>
+            <h5>APRIL - JUNE</h5>
+            <br>
+            <p>Present Quarter Plans Not Available</p>
+            <br>
+            <h5>JULY - SEPTEMBER</h5>
+            <br>
+            <p>Present Quarter Plans Not Available</p>
+            <br>
+            <h5>OCTOBER - DECEMBER</h5>
+            <br>
+            <p>Present Quarter Plans Not Available</p>
           </div>
           <div id="atlDivision">
-            <p>I am My ATL</p>
+            <p>Before launching the course, please ensure</p>
+            <ol>
+              <li>Disable the Pop-up blocker.</li>
+              <li>Clear your cookies and caches.</li>
+              <li>Some courses will pop up a blue window in addition to course window, do not close this blue window while accessing the course.</li>
+            </ol>
           </div>
           <div id="idpDivision">
-            <p>I am My IDP</p>
+            <span>
+              <label id="idpDivisionLabel-1">Type
+                <select>
+                  <option value="CHOOSE">Choose</option>
+                  <option value="idp">IDP</option>
+                </select>
+              </label>
+            </span>
+            <span>
+              <label id="idpDivisionLabel-2">Year
+                <select>
+                  <option value="">FY 19-20</option>
+                  <option value="">FY 20-21</option>
+                  <option value="">FY 21-22</option>
+                  <option value="">FY 22-23</option>
+                  <option value="">FY 23-24</option>
+                </select>
+              </label>
+            </span>
+            <span>
+              <a id="createNew" href="#newAction">Create New Action Plan</a>
+            </span>
+            <span>
+              <a id="idpSession" href="#sessionOnIdp">Session on IDP</a>
+            </span>
+            <span>
+              <p id="records">No Records Found</p>
+            </span>
+            <span>
+              <a onclick="dialogueBox()" id="viewmore" href="#">View more
+                <img src="Images/viewmoreicon.png" alt="view more">
+              </a>
+            </span>
+            <span>
+              <dialog id="myDialog">This is a dialog window</dialog>
+            </span>
           </div>
           <div id="myCompletionsDivision">
-            <p>I am My Completions</p>
+            <table id="myCompletionDivisionTable" cellspacing="0" cellpadding="0">
+              <th>Training Program</th>
+              <th>Skills</th>
+              <th>Proficiency Level</th>
+              <th>Learning Category</th>
+              <th>Mode of Learning</th>
+              <th>Mandays</th>
+              <th>Completion Month</th>
+              <tr>
+                <td>QMS</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>Class Room</td>
+                <td>0.5</td>
+                <td>Mar-2017</td>
+              </tr>
+            </table>
           </div>
           <div id="myOnlineTestsDivision">
-            <p>I am Online Tests</p>
+            <p>No Online Tests are available to display</p>
           </div>
           <div id="moocCoursesDivision">
             <p>I am Mooc Courses</p>
