--- a/viewmoreHTML.html
+++ b/viewmoreHTML.html
@@ -103,7 +103,7 @@
         </span>
         <!-- dropdown menu ends -->
       </div>
-      <div class="cont-1">
+      <div class="cont-1" onclick="Close()">
         <h4>My Trainings</h4>
       </div>
       <div class="cont-2">
