LIFE PORTAL WEBSITE.
1.All tabs are working fine same as LIFE PORTAL application.

files modified:
	mainPage.html
	mainPage.js
	mainPage.css

--- a/mainPage.html
+++ b/mainPage.html
@@ -119,67 +119,67 @@
         <div id="tabs">
           <ul>
             <li>
-              <a class="tabsBackground tablink" onclick="toggleVisibility(event,'myTrainingDivision');" href="#myTraining" id="default">
+              <a  id="tab1" class="tabsBackground tablink" onclick="toggleVisibility(event,'myTrainingDivision','001','01');" href="#myTraining">
                 <span>
-                  <img class="dashboard-icon" src="Images/my-training.png" style="display:none;"></img>
-                  <img class="dashboard-icon1" src="Images/my-training1.png" style="display:inline-block;"></img>
+                  <img id="01" class="dashboard-icon" src="Images/my-training.png" style="display:none;"></img>
+                  <img id="001" class="dashboard-icon1" src="Images/my-training1.png" style="display:inline-block;"></img>
                 </span>My Trainings
               </a>
             </li>
             <li>
-              <a class="tablink" onclick="toggleVisibility(event,'requestedTrainingDivision');" href="#requestedTraining">
+              <a id="tab2" class="tablink" onclick="toggleVisibility(event,'requestedTrainingDivision','002','02');" href="#requestedTraining">
                 <span>
-                  <img class="dashboard-icon" src="Images/requested-training.png"></img>
-                  <img class="dashboard-icon1" src="Images/requested-training1.png"></img>
+                  <img id="02" class="dashboard-icon" src="Images/requested-training.png"></img>
+                  <img id="002" class="dashboard-icon1" src="Images/requested-training1.png"></img>
                 </span>Requested Trainings</a>
             </li>
             <li>
-              <a class="tablink" onclick="toggleVisibility(event,'trainingCatalogDivision');" href="#trainingCatalog">
+              <a id="tab3" class="tablink" onclick="toggleVisibility(event,'trainingCatalogDivision','003','03');" href="#trainingCatalog">
                 <span>
-                  <img class="dashboard-icon" src="Images/training-catalog.png"></img>
-                  <img class="dashboard-icon1" src="Images/training-catalog1.png"></img>
+                  <img id="03" class="dashboard-icon" src="Images/training-catalog.png"></img>
+                  <img id="003" class="dashboard-icon1" src="Images/training-catalog1.png"></img>
                 </span>Training Catalogue</a>
             </li>
             <li>
-              <a class="tablink" onclick="toggleVisibility(event,'myLearningPlansDivision');" href="#myLearningPlans">
+              <a id="tab4" class="tablink" onclick="toggleVisibility(event,'myLearningPlansDivision','004','04');" href="#myLearningPlans">
                 <span>
-                  <img class="dashboard-icon" src="Images/learningplan.png"></img>
-                  <img class="dashboard-icon1" src="Images/learningplan1.png"></img>
+                  <img id="04" class="dashboard-icon" src="Images/learningplan.png"></img>
+                  <img id="004" class="dashboard-icon1" src="Images/learningplan1.png"></img>
                 </span>My Learning Plans</a>
             </li>
             <li>
-              <a class="tablink" onclick="toggleVisibility(event,'atlDivision');" href="#atl">
+              <a id="tab5" class="tablink" onclick="toggleVisibility(event,'atlDivision','005','05');" href="#atl">
                 <span>
-                  <img class="dashboard-icon" src="Images/training-catalog.png"></img>
-                  <img class="dashboard-icon1" src="Images/training-catalog1.png"></img>
+                  <img id="05" class="dashboard-icon" src="Images/training-catalog.png"></img>
+                  <img id="005" class="dashboard-icon1" src="Images/training-catalog1.png"></img>
                 </span>ATL</a>
             </li>
             <li>
-              <a class="tablink" onclick="toggleVisibility(event,'idpDivision');" href="#idp">
+              <a id="tab6" class="tablink" onclick="toggleVisibility(event,'idpDivision','006','06');" href="#idp">
                 <span>
-                  <img class="dashboard-icon" src="Images/IDPN.png"></img>
-                  <img class="dashboard-icon1" src="Images/IDPN_hover.png"></img>
+                  <img id="06" class="dashboard-icon" src="Images/IDPN.png"></img>
+                  <img id="006" class="dashboard-icon1" src="Images/IDPN_hover.png"></img>
                 </span>IDP</a>
             </li>
             <li>
-              <a class="tablink" onclick="toggleVisibility(event,'myCompletionsDivision');" href="#myCompletions">
+              <a id="tab7" class="tablink" onclick="toggleVisibility(event,'myCompletionsDivision','007','07');" href="#myCompletions">
                 <span>
-                  <img class="dashboard-icon" src="Images/learningplan.png"></img>
-                  <img class="dashboard-icon1" src="Images/learningplan1.png"></img>
+                  <img id="07" class="dashboard-icon" src="Images/learningplan.png"></img>
+                  <img id="007" class="dashboard-icon1" src="Images/learningplan1.png"></img>
                 </span>My Completions</a>
             </li>
             <li>
-              <a class="tablink" onclick="toggleVisibility(event,'myOnlineTestsDivision');" href="#onlineTests">
+              <a id="tab8" class="tablink" onclick="toggleVisibility(event,'myOnlineTestsDivision','008','08');" href="#onlineTests">
                 <span>
-                  <img class="dashboard-icon" src="Images/learningplan.png"></img>
-                  <img class="dashboard-icon1" src="Images/learningplan1.png"></img>
+                  <img id="08" class="dashboard-icon" src="Images/learningplan.png"></img>
+                  <img id="008" class="dashboard-icon1" src="Images/learningplan1.png"></img>
                 </span>My Online Tests</a>
             </li>
             <li>
-              <a class="tablink" onclick="toggleVisibility(event,'moocCoursesDivision');" href="#moocCourses">
+              <a id="tab9"class="tablink" onclick="toggleVisibility(event,'moocCoursesDivision','009','09');" href="#moocCourses">
                 <span>
-                  <img class="dashboard-icon" src="Images/training-catalog.png"></img>
-                  <img class="dashboard-icon1" src="Images/training-catalog1.png"></img>
+                  <img id="09" class="dashboard-icon" src="Images/training-catalog.png"></img>
+                  <img id="009" class="dashboard-icon1" src="Images/training-catalog1.png"></img>
                 </span>MOOC Courses</a>
             </li>
           </ul>
@@ -368,8 +368,6 @@
       </div>
       <!-- Main Body Ends -->
     </div>
-    <p id="demo">
-      SOMETHING</p>
     <script src="mainPage.js"></script>
   </body>
 </html>
