login page created

--- a/viewmoreHTML.html
+++ b/viewmoreHTML.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Workflow</title>
-    <link rel="stylesheet" href="mainPage.css">
+    <link rel="stylesheet" href="Dashboard.css">
     <link rel="stylesheet" href="viewmore.css">
   </head>
   <body>
@@ -190,6 +190,6 @@
         <a href="#contactus">CONTACT US</a>
       </div>
     </div>
-    <script src="mainPage.js"></script>
+    <script src="Dashboard.js"></script>
   </body>
 </html>
